# Covid-fake-news-detection

./: .gitignore  DATASET_CARD.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml
data/: README.md  cleaned_public_dataset.csv  hashed_labeled_dataset_v3.csv  hashed_preprocessed_balanced.csv  tweet_ids.csv
legacy/: Telegram-rumor.ipynb
notebooks/: telegram_rumor.ipynb  twitter_fake_news.ipynb
original notebooks/: Twitter-fake news.ipynb
results/: summary.txt  text_length_stats.txt
src/: __init__.py  cli.py  embedding.py  evaluation.py  preprocessing.py  training.py  utils.py  visualization.py
tests/: test_smoke.py
