[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-covid-fake-news"
version = "1.0.0"
description = "Persian COVID-19 fake news detection using LaBSE embeddings and ML classifiers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Narges Sedrehneshin" }]
keywords = ["fake-news", "persian", "covid-19", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "scipy>=1.10,<2.0",
    "scikit-learn>=1.3,<2.0",
    "xgboost>=2.0,<3.0",
    "torch>=2.0,<3.0",
    "sentence-transformers>=2.2,<4.0",
    "transformers>=4.30,<5.0",
    "hazm>=0.7,<1.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.13,<1.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
notebooks = ["jupyter>=1.0,<2.0", "ipykernel>=6.0,<7.0"]
dev = ["pytest>=7.0,<9.0", "ruff>=0.1,<1.0"]

[project.scripts]
persian-fakenews = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
